added js and fixed inded file.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,5 +74,8 @@
     <p>
       Please note that access to SourceFile is restricted to authorized individuals with valid credentials. If you are a member of Dusk&Rain or BreakingRain Security LLC, you can log in using your provided account information. For any inquiries or assistance, please reach out to our support team.
     </p>
+    <p>
+      <strong>This page can and will be subject to change.</strong>
+    </p>
 </body>
 </html>
