added js DownloadManager

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,16 +63,12 @@ Suspendisse cursus scelerisque tortor, at condimentum mauris tristique eu. Maece
 		<p></p>
 		<p></p>
 		<br />
-		<script lang="js">
-			import { DownloadManager } from '../components/DownloadManager.ts';
-			import { html, render } from 'lit';
-
-			const root = document.getElementById('root');
-			render(html`<download-manager></download-manager>`, root);
+		<script src="../js/DownloadManager.js" lang="js">
+		
 		  </script>
 
 		  <div id="root"></div>
 
-		  <download-manager></download-manager>
+		  <download-manager url=""></download-manager>
 	</body>
 </html>
