--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,12 +63,16 @@ Suspendisse cursus scelerisque tortor, at condimentum mauris tristique eu. Maece
 		<p></p>
 		<p></p>
 		<br />
-		<script src="../js/DownloadManager.js" lang="js">
-		
+		<script lang="js">
+			import { DownloadManager } from '../js/DownloadManager.js';
+			import { html, render } from 'lit';
+
+			const root = document.getElementById('root');
+			render(html`<download-manager></download-manager>`, root);
 		  </script>
 
 		  <div id="root"></div>
 
-		  <download-manager url=""></download-manager>
+		  <download-manager url=></download-manager>
 	</body>
 </html>
