--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { DownloadManager } from '../js/DownloadManager.js';
+import { DownloadManager } from '../components/DownloadManager.ts';
 			import { html, render } from 'lit';
 
 			const root = document.getElementById('root');
