--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { DownloadManager } from '../components/DownloadManager.ts';
 	<head>
 
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!--<link rel="icon" type="image/svg+xml" href="/favicon.svg" />-->
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Sourcefile</title>
