added wiki content.

--- a/src/pages/wiki.astro
+++ b/src/pages/wiki.astro
@@ -49,5 +49,10 @@
         </ul>
     </nav>
     <br />
+    <h3>Wiki Information</h3>
+    <hr />
+    <p>welcome to the sourcefile wiki, this catagorizes and logs all the software ready for download.</p>
+    <p><strong>the software he is free and shall not be redisturbed in a non-free manner.</strong></p>
+    <p></p>
     </body>
 </html>
