fixed page routing

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -56,33 +56,38 @@
         background-color: yellow;
         color: black;
       }
+      .center {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+   }
     </style>
   </head>
   <body>
     <nav>
       <ul>
         <li>
-          <a href="https://johntebrown.github.io/Sourcefile-Website-Revamped/"
+          <a href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/"
             >Home</a>
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/about"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/about"
             >About</a>
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/contact"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/contact"
             >Contact</a>
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/wiki"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/wiki"
             >Wiki</a>
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/download"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/download"
             >Download</a
           >
         </li>
@@ -93,6 +98,7 @@
       unfinished.</marquee
     >
     <br />
+    <div class="center">
     <h2>About SourceFile</h2>
     <p>
       SourceFile is a private access download site for projects available on the
@@ -117,5 +123,6 @@
     <p>
       <strong>This page can and will be subject to change.</strong>
     </p>
+    </div>
   </body>
 </html>
