--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -96,31 +96,31 @@
     <nav>
       <ul>
         <li>
-          <a href="https://johntebrown.github.io/Sourcefile-Website-Revamped/"
+          <a href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/"
             >Home</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/about"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/about"
             >About</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/contact"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/contact"
             >Contact</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/wiki"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/wiki"
             >Wiki</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/download"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/download"
             >Download</a
           >
         </li>
