--- a/src/pages/wiki.astro
+++ b/src/pages/wiki.astro
@@ -42,36 +42,41 @@
         background-color: yellow;
         color: black;
       }
+      .center {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+   }
     </style>
   </head><body>
     <nav>
       <ul>
         <li>
-          <a href="https://johntebrown.github.io/Sourcefile-Website-Revamped/"
+          <a href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/"
             >Home</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/about"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/about"
             >About</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/contact"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/contact"
             >Contact</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/wiki"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/wiki"
             >Wiki</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/download"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/download"
             >Download</a
           >
         </li>
@@ -81,6 +86,7 @@
       >Sourcefile is currently undergoing maintenance, things may be broken or
       unfinished.</marquee
     >
+    <div class="center">
     <br />
     <h3>Wiki Information</h3>
     <hr />
@@ -95,5 +101,6 @@
       >
     </p>
     <p></p>
+    </div>
   </body>
 </html>
