--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,37 +94,42 @@
         background-color: yellow;
         color: black;
       }
+      .center {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+   }
     </style>
   </head>
   <body>
     <nav>
       <ul>
         <li>
-          <a href="https://johntebrown.github.io/Sourcefile-Website-Revamped/"
+          <a href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/"
             >Home</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/about"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/about"
             >About</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/contact"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/contact"
             >Contact</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/wiki"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/wiki"
             >Wiki</a
           >
         </li>
         <li>
           <a
-            href="https://johntebrown.github.io/Sourcefile-Website-Revamped/download"
+            href="https://rainsoftware.github.io/Sourcefile-Website-Revamped/download"
             >Download</a
           >
         </li>
@@ -135,29 +140,15 @@
       unfinished.</marquee
     >
     <br />
-    <div class="">
+    <div class="center">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus
-        aliquam odio, sed tincidunt risus tristique sed. Nulla vestibulum
-        malesuada tortor, ut finibus ligula varius et. Nullam vitae sem et ex
-        pellentesque condimentum nec in tellus. Aliquam at ligula ligula.
-        Vivamus sem ipsum, faucibus vel consectetur id, eleifend at tellus. Cras
-        consectetur metus eu ipsum consectetur faucibus. Nam consectetur lectus
-        eu ligula laoreet condimentum. Proin consectetur rutrum diam, ac blandit
-        metus ullamcorper at. Donec malesuada elit ut dolor varius posuere.
-        Nullam at convallis ipsum. Suspendisse cursus scelerisque tortor, at
-        condimentum mauris tristique eu. Maecenas at ex ligula. Aliquam erat
-        volutpat. In id erat vitae ipsum fringilla lobortis. Pellentesque
-        habitant morbi tristique senectus et netus et malesuada fames ac turpis
-        egestas. Sed non ullamcorper mi, eget varius dui. Fusce et mauris eget
-        arcu facilisis interdum. Maecenas vestibulum, quam id elementum aliquam,
-        urna risus gravida dolor, ac rutrum turpis massa vel ligula. Etiam
-        ultrices libero non erat auctor, in vulputate ipsum ultrices. Curabitur
-        malesuada metus id nisl aliquam, sed lacinia enim tincidunt. Mauris
-        facilisis vulputate eros, in malesuada velit tincidunt nec. Suspendisse
-        potenti. Aenean dignissim libero augue, at egestas neque feugiat id.
-        Suspendisse commodo enim sed diam viverra, at consequat nunc feugiat.
-        Nunc vitae odio at metus dignissim congue. Cras vitae pharetra lacus.
+      <h3>Welcome to Sourcefile</h3>
+      <br />
+      Sourcefile is a simple software hosting site, we host software from various sources such as our many branches and partners like Oxide|Cheats.
+      <br />
+      Sourcefile, software uploads are not public and you need to get in contact with a member of Rainsoftware's Solem Locke (Locke) to have your software/file hosted.
+      <br />
+      Sourcefile uses Amazon S3 for backend storage, your files are <strong>100% secure</strong>
       </p>
     </div>
   </body>
