modfied download.astro

--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -160,7 +160,7 @@ nav {
     <section class="center">
      <details>
       <summary>Nexus Final</summary>
-      <button id="border" class="download-button" x-on:click="downloadFile('../pages/downloads/test-file.txt')">Download Nexus Final</button>
+      <button id="border" class="download-button" x-on:click="downloadFile('https://codeberg.org/rainsoftware/Nexus-Final/releases/download/production/Nexus-1.0-linux.tar.gz')">Download Nexus Final</button>
      </details>
       </section>
       </div>
