--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -161,6 +161,9 @@ nav {
      <details>
       <summary>Nexus Final</summary>
       <button id="border" class="download-button" x-on:click="downloadFile('https://codeberg.org/rainsoftware/Nexus-Final/releases/download/production/Nexus-1.0-linux.tar.gz')">Download Nexus Final</button>
+      <br>
+      <p>Nexus is a new unblocking tool for chrome-os users with the linux beta.</p>
+      <p>this is the finished product of the unblocker.</p>
      </details>
       </section>
       </div>
