--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Sourcefile Downloads</title>
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js"
