modfied download.astro

--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -168,6 +168,15 @@ nav {
       <p>this is the finished product of the unblocker.</p>
       </div>
      </details>
+     <details>
+      <summary>Nexus Target Verrifier</summary>
+      <div id="border">
+        <button class="download-button" x-on:click="downloadFile('https://github.com/rainsoftware/java-calculator/releases/download/release/johns-calculator-project.exe')">Java Calculator</button>
+        <br>
+        <p>This is a simple calculator that uses the JRE 'Java runtime enviorment'</p>
+        <p>this is made by Rainsoftware's Ant-Softworks.</p>
+        </div>
+     </details>
       </section>
       </div>
   </body>
