--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -170,7 +170,7 @@ nav {
      </details>
      <hr>
      <details>
-      <summary>Nexus Target Verrifier</summary>
+      <summary>Java calculator</summary>
       <div id="border">
         <button class="download-button" x-on:click="downloadFile('https://github.com/rainsoftware/java-calculator/releases/download/release/johns-calculator-project.exe')">Java Calculator</button>
         <br>
