--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -171,7 +171,7 @@ nav {
      <details>
       <summary>Java calculator</summary>
       <div id="border">
-        <button class="download-button" x-on:click="downloadFile('https://github.com/rainsoftware/java-calculator/releases/download/release/johns-calculator-project.exe')">Java Calculator</button>
+        <button class="download-button" x-on:click="downloadFile('https://github.com/rainsoftware/java-calculator/releases/download/release/johns-calculator-project.exe')">Download Java Calculator</button>
         <br>
         <p>This is a simple calculator that uses the JRE 'Java runtime enviorment'</p>
         <p>this is made by Rainsoftware's Ant-Softworks.</p>
