--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js"
       defer></script>
+    <link rel="icon" type="image/svg+xml" href="../../public/favicon.svg">
     <script src="../js/DownloadManager.js" lang="js"></script>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
