--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About SourceFile</title>
+    <link rel="icon" type="image/svg+xml" href="../../public/favicon.svg">
     <style>
       body {
         font-family: Arial, sans-serif;
