--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,6 +5,7 @@
 <html>
   <head>
     <title>Contact Page</title>
+    <link rel="icon" type="image/svg+xml" href="../../public/favicon.svg">
     <style>
       body {
         font-family: Arial, sans-serif;
