--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -9,6 +9,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js"
       defer></script>
+      <link rel="icon" type="image/svg+xml" href="../../public/favicon.svg">
       <style>
         body {
   margin: 0;
