added warning to Nexus download section

--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -164,6 +164,9 @@ nav {
       <div id="border">
       <button class="download-button" x-on:click="downloadFile('https://codeberg.org/rainsoftware/Nexus-Final/releases/download/production/Nexus-1.0-linux.tar.gz')">Download Nexus Final</button>
       <br>
+      <span style="color: red"><strong><p>THIS WILL NOT WORK WITHOUT LINUX BEING ENABLED IN THE CHROME-OS DEVELOPER SETTINGS</p></strong></span>
+      <p><i>refer to this guide to learn how to enable Linux: <a href="https://www.youtube.com/watch?v=7CKAhNIoLqY&pp=ygUaZW5hYmxlIGxpbnV4IG9uIGNocm9tZWJvb2s%3D">How To Enable Linux</a></i></p>
+      <hr>
       <p>Nexus is a new unblocking tool for chrome-os users with the linux beta.</p>
       <p>this is the finished product of the unblocker.</p>
       </div>
