updated wiki, contact, connection.ts
Summary:

Test Plan:

[ghstack-poisoned]

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -129,8 +129,7 @@
     </nav>
     <marquee class="marquee"
       >Sourcefile is currently undergoing maintenance, things may be broken or
-      unfinished.</marquee
-    >
+      unfinished.</marquee>
     <br />
     <div class="container">
       <h2>Contact Us</h2>
