--- a/src/pages/wiki.astro
+++ b/src/pages/wiki.astro
@@ -96,7 +96,7 @@
     </p>
     <p>
       <strong
-        >the software he is free and shall not be redisturbed in a non-free
+        >the software here is free and shall not be redistributed in a non-free
         manner.</strong
       >
     </p>
