edited SECURITY.md & Index.astro
Summary:

Test Plan:

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,7 +149,7 @@
       <br />
       Sourcefile, software uploads are not public and you need to get in contact with a member of Rainsoftware's Solem Locke (Locke) to have your software/file hosted.
       <br />
-      Sourcefile uses Amazon S3 for backend storage, your files are <strong>100% secure</strong>
+      Sourcefile uses Amazon S3 & Backblaze for backend storage, your files are <strong>100% secure</strong>
       </p>
     </div>
   </body>
